--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,6 +20,11 @@ if document
   div(id='document.id' class='data' value=(document._id))
   script(src='../javascripts/lib/jquery.js')
   script(src='../javascripts/lib/randomColor.min.js')
+  script(src='../javascripts/lib/htmlBuilder.js')
+  script(src='../javascripts/lib/view.js')
+  script(src='../javascripts/lib/documentView.js')
+  script(src='../javascripts/lib/datasetForm.js')
+  script(src='../javascripts/lib/datasetsList.js')
   script(src='../javascripts/mongoDB.js')
   script(src='../javascripts/demo.js')
   script(src='../javascripts/process/'+ document.status + '.js')
