--- a/public/stylesheets/process/metadata.css
+++ b/public/stylesheets/process/metadata.css
@@ -2,3 +2,8 @@
   margin-top: 20px !important;
   margin-bottom: 20px !important;
 }
+
+.row-margin {
+  margin-top: 20px !important;
+  margin-bottom: 20px !important;
+}
