--- a/views/forms/documents/upload.pug
+++ b/views/forms/documents/upload.pug
@@ -3,7 +3,7 @@ div(class='container-fluid')
     div(class='row')
       div(class='col-12')
         div(class='d-inline')
-          label(for='uploadedFile') Document File (xml/tei)
+          label(for='uploadedFile') Document File (mimetype must be : xml/tei or application/pdf)
           input(type='file' class='form-control-file' name='uploadedFile' id='uploadedFile')
     div(class='row')
       div(class='col-12')
