--- a/views/layout.pug
+++ b/views/layout.pug
@@ -26,6 +26,7 @@ html
     script(src='../javascripts/lib/datasetForm.js')
     script(src='../javascripts/lib/datasetsList.js')
     script(src='../javascripts/mongoDB.js')
+    script(src='../javascripts/dataseerML.js')
     script(src='../javascripts/demo.js')
     script(src='../javascripts/process/'+ document.status + '.js')
 
