--- a/views/modals/documents/datasets.pug
+++ b/views/modals/documents/datasets.pug
@@ -5,9 +5,24 @@ div(class='modal fade' id='datasets-error-modal' tabindex='-1' role='dialog' ari
   div(class='modal-dialog modal-lg modal-dialog-centered datasets-error-modal-lg' role='document')
     div(class='modal-content')
       div(class='modal-header')
-        h5(class='modal-title' id='datasets-error-modal-label') Dataset Error
-        button(type='button' class='close' data-dismiss='modal' aria-label='Close') x
-      div(class='modal-body' id='datasets-error-modal-body')
-          #Body
+        h5(class='modal-title' id='datasets-error-modal-label') #Title
+        button(type='button' class='close' data-dismiss='modal' aria-label='Close')
+          span(aria-hidden='true') &times;
+      div(class='modal-body' id='datasets-error-modal-body') #Body
 
+// Button
+button(id='datasets-confirm-modal-btn' type='button' data-toggle='modal' data-target='#datasets-confirm-modal' class='hidden')
+// Modal
+div(class='modal fade' id='datasets-confirm-modal' tabindex='-1' role='dialog' aria-labelledby='datasets-confirm-modal-label' aria-hidden='true')
+  div(class='modal-dialog modal-dialog-centered datasets-confirm-modal-lg' role='document')
+    div(class='modal-content')
+      div(class='modal-header')
+        h5(class='modal-title' id='datasets-confirm-modal-label') #Title
+        button(type='button' class='close' data-dismiss='modal' aria-label='Close')
+          span(aria-hidden='true') &times;
+      div(class='modal-data' id='datasets-confirm-modal-data') #Data
+      div(class='modal-body' id='datasets-confirm-modal-body') #Body
+      div(class='modal-footer')
+        button(type='button' class='btn btn-secondary btn-sm' data-dismiss='modal') Cancel
+        button(type='button' id='datasets-confirm-modal-valid' class='btn btn-primary btn-sm' data-dismiss='modal') Confirm
 
