--- a/public/stylesheets/process/datasets.css
+++ b/public/stylesheets/process/datasets.css
@@ -8,20 +8,46 @@ i {
   margin-right: 4px; 
 }
 
+.btn-lite {
+  border: none;
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
 .row>*,
 .form-row>* {
   vertical-align: middle;
 }
 
+.bordered {
+  border: 3px solid lightgray;
+  border-radius: 5px;
+}
+
+/*view-selection*/
+
+#view-selection {
+  border-bottom: 3px solid lightgray;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  padding: 20px;
+  width: 100%;
+  text-align: center;
+}
+
+#view-selection label {
+  width: 34%;
+}
+
 /*dataset-form*/
 
 #dataset-form {
-  position: fixed;
-  height: 75%;
-  width: 27.5%;
+  width: 100%;
+  height: 90vh;
   overflow: auto;
-  margin-top: 25 !important;
-  margin-bottom: 25px !important;
+  padding: 15px;
 }
 
 #dataset-form #dataset\.id {
@@ -37,7 +63,8 @@ i {
 
 #dataset-form #dataset\.id .key,
 #dataset-form #dataset\.confidence .key,
-#dataset-form #dataset\.dataType .key {
+#dataset-form #dataset\.dataType .key,
+#dataset-form #dataset\.subType .key {
   display: inline-block;
 }
 
@@ -45,7 +72,7 @@ i {
   margin-bottom: 20px; 
 }
 
-#dataset-form .form-row > div {
+#dataset-form .form-row>div {
   width: 100%;
   display: block;
 }
@@ -78,14 +105,13 @@ i {
 /*document-view*/
 
 #document-view {
-  position: fixed;
-  height: 75%;
-  width: 45%;
+  border-top: 0px solid lightgray;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  padding: 15px;
+  width: 100%;
+  height: 82vh;
   overflow: auto;
-}
-
-#document-view span[type="sentence"][from="dataseer"] {
-  border: 1px solid black;
 }
 
 /* TEI CUSTOMIZATION */
@@ -120,22 +146,22 @@ i {
 
 #document-view tei s {
   text-decoration: none;
-  margin-right: 3px; 
+  margin-right: 3px;
 }
 
-#document-view tei s:not([corresp]):not([id]):hover {
+#document-view tei s.hover {
   background-color: gainsboro;
   cursor: pointer;
 }
 
-#document-view tei s:not([corresp]):not([id]).selected {
-  background-color: limegreen;
+#document-view tei s.selected {
+  background-color: rgb(0, 123, 255);
+  color: white;
   cursor: pointer;
 }
 
 #document-view tei s[corresp],
 #document-view tei s[id] {
-  border: none;
   cursor: pointer;
   background-color: lightyellow;
 }
@@ -147,13 +173,10 @@ i {
 /*datasets-list*/
 
 #datasets-list {
+  width: 100%;
+  height: 83vh;
   overflow: auto;
-  position: fixed;
-  display: block;
-  height: 75%;
-  width: 15%;
-  margin-top: 25 !important;
-  margin-bottom: 25px !important;
+  padding: 15px;
 }
 
 #datasets-list .selected {
@@ -162,6 +185,7 @@ i {
 }
 
 #datasets-list .form-row {
+  text-align: center;
   display: block;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -170,7 +194,7 @@ i {
   vertical-align: middle;
 }
 
-#datasets-list .form-row > * {
+#datasets-list .form-row>* {
   display: inline-block;
 }
 
@@ -181,15 +205,18 @@ i {
   margin-right: 10px;
 }
 
+#datasets-list>.container-fluid {
+  text-align: center;
+}
+
 #datasets-list .form-row button {
   display: inline-block;
   margin-left: 4px;
   margin-right: 4px;
 }
 
-#datasets_validation,
-#new_dataset {
-  margin-top: 25px;
+#datasets_validation {
+  margin-top: 15px;
 }
 
 .warning-color-dark {
@@ -202,10 +229,23 @@ i {
 
 #datasets-error-modal .modal-header {
   color: white;
-  background-color: #0099CC;
+  background-color: rgb(0, 123, 255);
 }
 
 #datasets-error-modal .modal-body {
+  color: #CC0000;
+}
+
+#datasets-confirm-modal .modal-header {
+  color: white;
+  background-color: rgb(0, 123, 255);
+}
+
+#datasets-confirm-modal .modal-data {
+  display: none;
+}
+
+#datasets-confirm-modal .modal-body {
   color: #CC0000;
 }
 
