--- a/views/backoffice/upload.pug
+++ b/views/backoffice/upload.pug
@@ -5,6 +5,12 @@ block content
   div(class='container-fluid')
     div(class='row')
       div(class='col-12 text-center')
-        div(class='header') DATASEER
+        div(class='header') DATASEER BACKOFFICE
+    div(class='row')
+      div(class='col-12')
+        div(class='title') Add new document(s)
     div(class='row')
         include ../forms/documents/upload.pug
+    div(class='row')
+      div(class='col-12')
+        a(href='/') Home
