--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,15 +4,13 @@ html
     title DataSeer
     link(rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous')
     link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css' integrity='sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm' crossorigin='anonymous')
+    link(rel='stylesheet' href='../stylesheets/style.css')
     if document
-      link(rel='stylesheet' href='../stylesheets/style.css')
       link(rel='stylesheet' href='../stylesheets/tei.css')
       link(rel='stylesheet' href='../stylesheets/process/'+ document.status + '.css')
     if backoffice
-      link(rel='stylesheet' href='./stylesheets/style.css')
-      link(rel='stylesheet' href='./stylesheets/tei.css')
-      link(rel='stylesheet' href='./stylesheets/backoffice.css')
-    // link(rel='stylesheet' href='./stylesheets/debug.css')
+      link(rel='stylesheet' href='../../stylesheets/tei.css')
+      link(rel='stylesheet' href='../../stylesheets/process/backoffice.css')
   body
     block content
 
@@ -31,8 +29,8 @@ html
     script(src='../javascripts/process/'+ document.status + '.js')
 
   if backoffice
-    script(src='./javascripts/lib/jquery.js')
-    script(src='./javascripts/process/backoffice.js')
+    script(src='../../javascripts/lib/jquery.js')
+    script(src='../../javascripts/process/backoffice.js')
 
   script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js' integrity='sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1' crossorigin='anonymous')
   script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js' integrity='sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM' crossorigin='anonymous')
