--- a/views/index.pug
+++ b/views/index.pug
@@ -54,7 +54,7 @@ block content
               tr
                 td GET
                 td
-                  a(href='/documents/?limit=20') /api/documents/?limit=[20]
+                  a(href='documents/?limit=20') /api/documents/?limit=[20]
                 td Get list of first [limit] Documents (by default, limit will be set to 20)
               tr
                 td GET
@@ -77,7 +77,7 @@ block content
               tr
                 td GET
                 td
-                  a(href='/api/documents/?limit=20') /api/documents/?limit=[20]
+                  a(href='api/documents/?limit=20') /api/documents/?limit=[20]
                 td Get [limit] first Documents (by default, limit will be set to 20)
               tr
                 td GET
