--- a/views/forms/documents/upload.pug
+++ b/views/forms/documents/upload.pug
@@ -9,7 +9,7 @@ div(class='container-fluid')
     div(class='row')
       div(class='col-12')
           input(type='checkbox' class='form-control-file' name='dataseerML' id='dataseerML' value='dataseer-ml') 
-          label(for='dataseerML') Process Dataserr-ML on file(s)
+          label(for='dataseerML') Process Dataseer-ML on file(s)
     div(class='row')
       div(class='col-12')
           button(type='submit' class='btn btn-primary btn-sm' id='addDocuments') Add new document(s)
