--- a/views/documents/datasets.pug
+++ b/views/documents/datasets.pug
@@ -23,7 +23,7 @@ block content
         div(class='row')
           div(id='datasets-list' class='form bordered')
         div(class='row')
-          button(id='datasets_validation' class='btn btn-primary') This info is correct : Continue
+          button(id='datasets_validation' class='btn btn-primary') Finish
 
   include ../modals/quit.pug
   include ../modals/documents/datasets.pug
