--- a/public/stylesheets/process/datasets.css
+++ b/public/stylesheets/process/datasets.css
@@ -52,7 +52,7 @@ i {
 
 #dataset-form #dataset\.id {
   display: inline-block;
-  width: auto;
+  width: 100%;
   cursor: pointer;
 }
 
@@ -72,6 +72,12 @@ i {
   margin-bottom: 20px; 
 }
 
+#dataset-form .centered>div{
+  width: 100%;
+  text-align: center;
+  vertical-align: middle;
+}
+
 #dataset-form .form-row>div {
   width: 100%;
   display: block;
@@ -80,7 +86,7 @@ i {
 #dataset-form .form-row .key {
   margin-bottom: 4px; 
   margin-right: 5px;
-  display: block;
+  display: inline-block;
   font-weight: bold;
 }
 
@@ -110,7 +116,7 @@ i {
   border-top-right-radius: 0px;
   padding: 15px;
   width: 100%;
-  height: 82vh;
+  height: 83vh;
   overflow: auto;
 }
 
@@ -185,7 +191,7 @@ i {
 
 #datasets-list {
   width: 100%;
-  height: 83vh;
+  height: 79vh;
   overflow: auto;
   padding: 15px;
 }
