--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -38,6 +38,8 @@ body {
 
 #document-view {
   background-color: white;
+  font-family: Times, "Times New Roman", serif;
+  font-size: 14px;
 }
 
 #dataset-form {
