--- a/views/documents/datasets.pug
+++ b/views/documents/datasets.pug
@@ -32,6 +32,7 @@ block content
 
   include ../modals/quit.pug
   include ../modals/documents/datasets.pug
+  include ../modals/help.pug
 
   if demo
     include ../forms/demo/datasets.pug
