--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,12 +3,13 @@ html
   head
     title DataSeer
     link(rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous')
-    link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css' integrity='sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm' crossorigin='anonymous')
-    link(rel='stylesheet' href='../stylesheets/style.css')
+    link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css' integrity='sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm' crossorigin='anonymous')  
     if document
+      link(rel='stylesheet' href='../stylesheets/style.css')
       link(rel='stylesheet' href='../stylesheets/tei.css')
       link(rel='stylesheet' href='../stylesheets/process/'+ document.status + '.css')
     if backoffice
+      link(rel='stylesheet' href='../../stylesheets/style.css')
       link(rel='stylesheet' href='../../stylesheets/tei.css')
       link(rel='stylesheet' href='../../stylesheets/process/backoffice.css')
   body
