--- a/views/backoffice/upload.pug
+++ b/views/backoffice/upload.pug
@@ -4,13 +4,11 @@ block content
 
   div(class='container-fluid')
     div(class='row')
-      div(class='col-12 text-center')
-        div(class='header') DATASEER BACKOFFICE
+      div(class='col-12' style='background-color:#FFFFFF; border:1px solid #184D7E; border-radius: 20px; margin-bottom:10px;')
+        img(src='../../img/DataSeer-logo-75.png' style='margin-left:10px; ')
     div(class='row')
-      div(class='col-12')
-        div(class='title') Add new document(s)
-    div(class='row')
-        include ../forms/documents/upload.pug
-    div(class='row')
-      div(class='col-12')
-        a(href='/') Home
+      div(class='col-12' style='background-color:#FFFFFF; border:1px solid #184D7E; border-radius: 20px;')
+        div(style='margin-top:10px;margin-left:10px;') Upload a new document: supported format are PDF, JATS/NLM, TEI XML, ...
+        div(class='row')
+            include ../forms/documents/upload.pug
+        div(class='row')
