--- a/views/backoffice/upload.pug
+++ b/views/backoffice/upload.pug
@@ -12,3 +12,8 @@ block content
         div(class='row')
             include ../forms/documents/upload.pug
         div(class='row')
+
+  div(style='text-align:center;')  
+      a(href='https://www.dataseer.io' style='color:#ffffff;' target='_blank') dataseer.io
+      a(href='https://github.com/kermitt2/dataseer-web' target='_blank')
+        i(class='fab fa-github' style='color:#8DCB55;margin-left:5px;')
