--- a/views/documents/datasets.pug
+++ b/views/documents/datasets.pug
@@ -25,10 +25,10 @@ block content
             div(id='datasets-list' class='form bordered' style='padding:0;')
             button(id='datasets_validation' class='btn btn-primary' style='width:100%;margin-left:3px; margin-right:3px;') Finish
 
-  div  
-      a(href='https://www.dataseer.io' style='color:#ffffff;margin-left:5px;' target='_blank') dataseer.io
+  div(style='text-align:center;')  
+      a(href='https://www.dataseer.io' style='color:#ffffff;' target='_blank') dataseer.io
       a(href='https://github.com/kermitt2/dataseer-web' target='_blank')
-        i(class='fab fa-github' style='color:#666666;')
+        i(class='fab fa-github' style='color:#8DCB55;margin-left:5px;')
 
   include ../modals/quit.pug
   include ../modals/documents/datasets.pug
