--- a/views/documents/metadata.pug
+++ b/views/documents/metadata.pug
@@ -50,5 +50,10 @@ block content
             a(href="mailto:tim@dataseer.io")
               button(id='metadata_contest' class='btn btn-primary') Something is wrong : Contact the DataSeer curator
 
+  div(style='text-align:center;')  
+      a(href='https://www.dataseer.io' style='color:#ffffff;' target='_blank') dataseer.io
+      a(href='https://github.com/kermitt2/dataseer-web' target='_blank')
+        i(class='fab fa-github' style='color:#8DCB55;margin-left:5px;')
+
   if demo
     include ../forms/demo/metadata.pug
