--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,6 +8,15 @@ body {
   background-color: lightgray;
 }
 
+#user_id,
+#user_role {
+  display: none;
+}
+
+.nav li {
+  margin-right: 5px;
+}
+
 .crud-button-action {
   margin-top: 50px !important;
   margin-bottom: 25px !important;
