--- a/views/documents/datasets.pug
+++ b/views/documents/datasets.pug
@@ -24,7 +24,10 @@ block content
         div(class='col-2')
           div(class='row')
             div(id='datasets-list' class='form bordered')
-            button(id='datasets_validation' class='btn btn-primary') Finish
+            if current_user.role.label === 'curator'
+              button(id='datasets_validation' class='btn btn-primary' title='Unavailable for curators' disabled) Finish
+            else
+              button(id='datasets_validation' class='btn btn-primary') Finish
 
   div(style='text-align:center;')  
       a(href='https://www.dataseer.io' style='color:#ffffff;' target='_blank') dataseer.io
