--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,15 +4,40 @@ html
     title DataSeer
     link(rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous')
     link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css' integrity='sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm' crossorigin='anonymous')  
+    link(rel='stylesheet' href='../stylesheets/style.css')
     if document
-      link(rel='stylesheet' href='../stylesheets/style.css')
       link(rel='stylesheet' href='../stylesheets/tei.css')
-      link(rel='stylesheet' href='../stylesheets/process/'+ document.status + '.css')
+      if current_user.role.label === 'curator'
+        link(rel='stylesheet' href='../stylesheets/process/datasets.css')
+      else
+        link(rel='stylesheet' href='../stylesheets/process/'+ document.status + '.css')
     if backoffice
       link(rel='stylesheet' href='../../stylesheets/style.css')
-      link(rel='stylesheet' href='../../stylesheets/tei.css')
       link(rel='stylesheet' href='../../stylesheets/process/backoffice.css')
   body
+    .navbar.navbar-inverse.navbar-fixed-top
+      .navbar-inner
+        .container
+          if current_user
+            div #{current_user.username} (#{current_user.role.label})
+            div#user_id #{current_user.id}
+            div#user_role #{current_user.role.label}
+          ul.nav
+            if current_user
+              li
+                a(href='/') Home
+              li
+                a(href='/myAccount') My account
+              li
+                a(href='/backoffice/upload/') Upload document
+              li
+                a(href='/logout') Log Out 
+            else
+              li
+                a(href='/register') Register
+              li
+                a(href='/login') Log In
+
     block content
 
   if document
@@ -27,11 +52,15 @@ html
     script(src='../javascripts/mongoDB.js')
     script(src='../javascripts/dataseerML.js')
     script(src='../javascripts/demo.js')
-    script(src='../javascripts/process/'+ document.status + '.js')
-
-  if backoffice
+    if current_user.role.label === 'curator'
+      script(src='../javascripts/process/datasets.js')
+    else
+      script(src='../javascripts/process/'+ document.status + '.js')
+  else if backoffice
     script(src='../../javascripts/lib/jquery.js')
     script(src='../../javascripts/process/backoffice.js')
+  else
+    script(src='../javascripts/lib/jquery.js')
 
   script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js' integrity='sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1' crossorigin='anonymous')
   script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js' integrity='sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM' crossorigin='anonymous')
